--- a/src/App.css
+++ b/src/App.css
@@ -114,4 +114,13 @@ p {
     font-size: 1em; /* Ajusta o tamanho do texto */
   }
 }
-
+.titulo-home {
+  font-family: 'Nanum Pen Script', cursive !important;
+  font-weight: 400 !important;
+  font-size: 2.5em;
+  color: black;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.7); /* fundo branco transparente */
+  padding: 20px 0;
+  border-radius: 12px; /* bordas suavemente arredondadas */
+}
