--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,6 +29,7 @@
 }
 
 .header-content {
+  font-family: 'Nanum Pen Script', cursive !important;
   position: relative;
   background: rgba(255, 255, 255, 0.5); /* Fundo com leve transparência */
   padding: 20px;
@@ -47,6 +48,7 @@
 }
 
 h1 {
+  font-family: 'Caveat', cursive !important;
   text-align: center;
   font-size: 2.5em;
   color: rgb(255, 255, 255);
@@ -81,3 +83,4 @@ h1 {
     font-size: 1.5em;
   }
 }
+
