--- a/src/components/WritersPage.css
+++ b/src/components/WritersPage.css
@@ -15,6 +15,7 @@
   margin-bottom: 30px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 90%;
+  font-family: 'Nanum Pen Script', cursive !important;
 }
 
 .writers-grid {
@@ -131,3 +132,12 @@
     padding: 6px 16px;
   }
 }
+
+.titulo-pag {
+  font-family: 'Nanum Pen Script', cursive !important;
+  font-weight: 400 !important;
+  font-size: 2.5em;
+  color: rgb(255, 255, 255);
+  text-align: center;
+}
+
