--- a/src/components/FotosPage.css
+++ b/src/components/FotosPage.css
@@ -6,8 +6,9 @@
 }
 
 .fotos-container h2 {
-  color: #fff;
+  color: #000000;
   margin-bottom: 30px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
 }
 
 /* Item do carrossel */
