--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ p {
   font-size: 1.2em;
   color: #ffffff;
   margin-top: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
 }
 
 /* Estilos para o Alice Carousel */
@@ -120,12 +121,13 @@ p {
   font-size: 2.5em;
   color: black;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.2); /* mesmo fundo do menu */
+  background-color: rgba(255, 255, 255, 0.2);
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* mesma sombra do menu */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   margin: 20px auto;
   width: fit-content;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
 }
 
 @media (max-width: 480px) {
