--- a/src/components/EventosPage.css
+++ b/src/components/EventosPage.css
@@ -26,3 +26,7 @@
 .eventos-container strong {
   color: black;
 }
+
+.eventos-container{
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
+}
