--- a/src/components/WritersPage.css
+++ b/src/components/WritersPage.css
@@ -16,6 +16,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 90%;
   font-family: 'Nanum Pen Script', cursive !important;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
 }
 
 .writers-grid {
@@ -139,5 +140,6 @@
   font-size: 2.5em;
   color: rgb(255, 255, 255);
   text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* sombra no texto */
 }
 
